syntax = "proto3";

package vcassist.powerschool.v1;

message AssignmentData {
  string title = 1;
  string description = 2;
  string category = 3;
  int64 due_date = 4;
  optional float points_earned = 5;
  optional float points_possible = 6;
  bool is_missing = 7;
  bool is_late = 8;
  bool is_collected = 9;
  bool is_exempt = 10;
  bool is_incomplete = 11;
}

message Meeting {
  int64 start = 1;
  int64 stop = 2;
}

message AssignmentCategory {
  string name = 1;
  // this is a value from 0-1
  float weight = 2;
}

message GradeSnapshot {
  int64 time = 1;
  // this is a value from 0-100
  float value = 2;
}

message CourseData {
  string guid = 1;
  string name = 2;
  string period = 3;
  string teacher = 4;
  string teacher_email = 5;
  string room = 6;

  float overall_grade = 7;
  string day_name = 8;
  int32 homework_passes = 9;

  repeated AssignmentData assignments = 10;
  repeated Meeting meetings = 11;
  repeated GradeSnapshot snapshots = 12;
  repeated AssignmentCategory assignment_categories = 13;
}

message SchoolData {
  string name = 1;
  string phone = 2;
  string fax = 3;
  string email = 4;
  string street_address = 5;
  string city = 6;
  string state = 7;
  string zip = 8;
  string country = 9;
}

message Bulletin {
  string title = 1;
  int64 start_date = 2;
  int64 end_date = 3;
  string body = 4;
}

message StudentProfile {
  // commented out fields are currently unused
  // string guid = 1;
  float current_gpa = 2;
  // string name = 3;
  // bytes photo = 4;
}

